--- a/next.html
+++ b/next.html
@@ -119,7 +119,7 @@
   </div>
 
   <h1 id="title">HAPPY BIRTHAY INDU</h1>
-  <p id="text">ITNI DUR BAS ITNA HI KAR SAKTA HU 💕</p>
+  <p id="text">ITNI DUR SE BAS ITNA HI KAR SAKTA HU 💕</p>
 
   <button class="cut-btn" id="cutBtn" onclick="cutCake()">CAKE KATO</button>
   <button class="next-btn" id="nextBtn" onclick="goNextPage()">MESSAGE FOR YOU</button>
@@ -177,3 +177,4 @@
 
 </body>
 </html>
+
