--- a/final.html
+++ b/final.html
@@ -97,7 +97,7 @@
   <h1>💖 HEY, SWEETIE 💖</h1>
   <p>
     Mujhe Achha Lagta hai Jab Tum Mujhse Baat karti ho<br>
-    Chhere Par Ek Hasi Aa Jati Hai.<br>
+    Chehre Par Ek Hasi Aa Jati Hai.<br>
     Me Ye to Nahi Janta Apko Kaisa Lagta hai Mere satha, Par Mujhe Bohot Achha Lagta hai <br>
     Jadya Bak Bak Nahi Karuga, Birthday Mubarkh 💕
   </p>
@@ -209,3 +209,4 @@ window.addEventListener('resize',()=>{
 
 </body>
 </html>
+
