--- a/final.html
+++ b/final.html
@@ -98,8 +98,8 @@
   <p>
     Mujhe Achha Lagta hai Jab Tum Mujhse Baat karti ho<br>
     Chehre Par Ek Hasi Aa Jati Hai.<br>
-    Me Ye to Nahi Janta Apko Kaisa Lagta hai Mere satha, Par Mujhe Bohot Achha Lagta hai <br>
-    Jadya Bak Bak Nahi Karuga, Birthday Mubarkh 💕
+    Par Sach To Ye Hai Ki Me Tumhe Hamesha Kush Dekhna Chahta Hu.  <br>
+    Jadya Bak Bak Nahi Karuga, Birthday Enjoy Karo 💕
   </p>
 </div>
 
@@ -209,4 +209,5 @@ window.addEventListener('resize',()=>{
 
 </body>
 </html>
+
 
