--- a/final.html
+++ b/final.html
@@ -96,10 +96,10 @@
 <div class="final-message">
   <h1>💖 HEY, SWEETIE 💖</h1>
   <p>
-    Mujhe Achha Lagta hai Jab Tum Mujhse Baat karti ho<br>
-    Chehre Par Ek Hasi Aa Jati Hai.<br>
-    Par Sach To Ye Hai Ki Me Tumhe Hamesha Kush Dekhna Chahta Hu.  <br>
-    Jadya Bak Bak Nahi Karuga, Birthday Enjoy Karo 💕
+   Bohot Si Baate Hai Jo Aapse Kehni Thi, Par Filhal Ke Liye<br>
+    Me Bus Itna Chahta Hu Ki Aap Kush Raho.<br>
+    Or Ha Ye Sab Mene Pehle kabhi Kiya Nahi Hai, To Jaisa Bhi Hai I Hope Aapko Pasand Aaye  <br>
+    Jadya Bak Bak Nahi Karuga, Birthday Enjoy Kariye 💕
   </p>
 </div>
 
@@ -209,5 +209,6 @@ window.addEventListener('resize',()=>{
 
 </body>
 </html>
+
 
 
